examples/kju/positive/functions/unused_function.kju
fun f():Unit{
}

fun kju():Unit{
}