examples/kju/negative/structs/bad_identifier_small_letter.kju
struct i
{
}

fun kju() : Unit
{
}